# erlzmq

./: .gitignore  Makefile  Makefile.am  README  README.md  acinclude.m4  autogen.sh  bootstrap  configure.ac  edoc-info  index.html  overview-summary.html  package.sh  rebar.config  update  zmq.html
c_src/: Makefile  Makefile.am  Makefile.in  zmq_drv.cpp  zmq_drv.h
doc/: modules-frame.html  overview-summary.html  overview.edoc  packages-frame.html  zmq.html
examples/: zmq_pubserver.erl  zmq_repserver.erl  zmq_reqclient.erl  zmq_subclient.erl
include/: zmq.hrl
msvc/: README.first  msvc.sln  msvc.vcproj
perf/: local_thr  local_thr.erl  local_thr_active.erl  remote_thr  remote_thr.erl
src/: Makefile  Makefile.in  overview.edoc  zmq.app.in  zmq.app.src  zmq.erl  zmq_context.erl  zmq_drv.erl  zmq_pubserver.erl  zmq_repserver.erl  zmq_reqclient.erl  zmq_socket.erl  zmq_subclient.erl
test/: perf_local_thr.es  perf_local_thr_active.es  perf_remote_thr.es
